--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ header .headImgContainer {
 header h1 {
     align-self: flex-end;
 }
-form {
+.form-control {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -58,7 +58,7 @@ form {
   text-align: center;
 }
 
-form label {
+.form-control label {
     font-size: 1.5rem;
     font-weight: bold;
 }
@@ -123,6 +123,12 @@ form label {
     font-size: 1.2rem;
 }
 
+.movie-birth {
+    font-size: 1.4rem;
+    margin-bottom: .5rem;
+    font-style: italic;
+}
+
 @media screen and (min-width :960px) {
     html {
         font-size: 100%;
@@ -134,12 +140,12 @@ form label {
         width: 120px;
         height: 120px;
     }
-    form {
+    .form-control {
         flex-direction: row;
         align-items: center;
         justify-content: center;
     }
-    form label {
+    .form-control label {
         padding: 1rem 0;
         font-style: italic;
     }
@@ -164,7 +170,7 @@ form label {
     }
     .card {
         width: 100%;
-        max-width: 230px;
+        max-width: 340px;
         flex: 0 0 auto;
     }
     .card img {
