--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ header h1 {
         max-width: 1200px;
         margin: 0 auto;
         flex-direction: row;
+        justify-content: center;
     }
     .card {
         width: 100%;
